// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse demo -- collapse 1`] = `
.emotion-74 {
  display: none;
}

.emotion-70 {
  font-size: 12px;
}

.emotion-70 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-70 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-10 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-10 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
  border-color: #e6ffed;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-inner {
  color: #ffffff;
  border-color: #e6ffed;
  background: #15ad31;
}

.emotion-3 .uc-fe-switch-button {
  left: 100%;
  margin-left: -28px;
}

.emotion-3 .uc-fe-switch-dot {
  background: #15ad31;
}

.emotion-3 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-45 .uc-fe-checkbox {
  margin-right: 8px;
}

.emotion-45 .uc-fe-checkbox:last-child {
  margin-right: 0;
}

.emotion-19 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-19 > * {
  font-size: 12px;
}

.emotion-19 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-19.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-19:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-17.uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-17 .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-17.uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-17 .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-15 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-23.uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-23 .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-61 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-61 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-61 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-61 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-61 .uc-fe-numberinput-handler-up,
.emotion-61 .uc-fe-numberinput-handler-down {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 2px;
  border-style: solid;
  border-color: #d2d6ea;
  cursor: pointer;
  color: #0a1633;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  vertical-align: middle;
}

.emotion-61 .uc-fe-numberinput-handler-up:hover,
.emotion-61 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-61 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-61 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  fill: #cccccc;
  border-color: #c3cad9;
}

.emotion-61 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-61 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-61 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-61 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-61 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-61:hover {
  border-color: #c3cad9;
}

.emotion-61 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-61 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-61 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-61 .uc-fe-numberinput-handler-up,
.emotion-61 .uc-fe-numberinput-handler-down {
  height: 13px;
  width: 22px;
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
}

.emotion-61 .uc-fe-numberinput-handler-up:hover,
.emotion-61 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-61 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-61 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-57 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-74 {
  display: none;
}

.emotion-70 {
  font-size: 12px;
}

.emotion-70 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-70 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-10 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-10 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
  border-color: #e6ffed;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-inner {
  color: #ffffff;
  border-color: #e6ffed;
  background: #15ad31;
}

.emotion-3 .uc-fe-switch-button {
  left: 100%;
  margin-left: -28px;
}

.emotion-3 .uc-fe-switch-dot {
  background: #15ad31;
}

.emotion-3 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-45 .uc-fe-checkbox {
  margin-right: 8px;
}

.emotion-45 .uc-fe-checkbox:last-child {
  margin-right: 0;
}

.emotion-19 {
  cursor: pointer;
  position: relative;
  white-space: nowrap;
  min-height: 28px;
  line-height: 28px;
  display: inline-block;
  vertical-align: middle;
  font-size: 0;
  color: #0a1633;
}

.emotion-19 > * {
  font-size: 12px;
}

.emotion-19 .uc-fe-checkbox-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-19.uc-fe-checkbox-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-19:hover .uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
}

.emotion-17.uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-17 .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-17.uc-fe-checkbox-icon-wrap {
  border-color: #3860f4;
  background: #3860f4;
}

.emotion-17 .uc-fe-checkbox-icon {
  visibility: visible;
  opacity: 1;
  fill: #ffffff;
}

.emotion-15 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 14px;
  height: 14px;
}

.emotion-23.uc-fe-checkbox-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  vertical-align: middle;
}

.emotion-23 .uc-fe-checkbox-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-61 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-61 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-61 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-61 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-61 .uc-fe-numberinput-handler-up,
.emotion-61 .uc-fe-numberinput-handler-down {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 2px;
  border-style: solid;
  border-color: #d2d6ea;
  cursor: pointer;
  color: #0a1633;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  background: #ffffff;
  vertical-align: middle;
}

.emotion-61 .uc-fe-numberinput-handler-up:hover,
.emotion-61 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-61 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-61 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: default;
  pointer-events: none;
  color: #cccccc;
  fill: #cccccc;
  border-color: #c3cad9;
}

.emotion-61 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-61 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-61 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-61 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-61 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-61:hover {
  border-color: #c3cad9;
}

.emotion-61 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
}

.emotion-61 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-61 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-61 .uc-fe-numberinput-handler-up,
.emotion-61 .uc-fe-numberinput-handler-down {
  height: 13px;
  width: 22px;
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
}

.emotion-61 .uc-fe-numberinput-handler-up:hover,
.emotion-61 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-61 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-61 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-57 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-70 emotion-90"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        multiple
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          checked=""
          class="emotion-3 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        openKeys
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-checkbox-group emotion-45 emotion-46"
        >
          <span
            checked=""
            class="uc-fe-checkbox uc-fe-checkbox-checked emotion-19 emotion-20"
          >
            <span
              checked=""
              class="uc-fe-checkbox-icon-wrap emotion-17 emotion-18"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-15 emotion-16"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              0
            </span>
          </span>
          <span
            class="uc-fe-checkbox emotion-19 emotion-20"
          >
            <span
              class="uc-fe-checkbox-icon-wrap emotion-23 emotion-18"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-15 emotion-16"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              1
            </span>
          </span>
          <span
            class="uc-fe-checkbox emotion-19 emotion-20"
          >
            <span
              class="uc-fe-checkbox-icon-wrap emotion-23 emotion-18"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-15 emotion-16"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              2
            </span>
          </span>
          <span
            class="uc-fe-checkbox emotion-19 emotion-20"
          >
            <span
              class="uc-fe-checkbox-icon-wrap emotion-23 emotion-18"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-15 emotion-16"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              3
            </span>
          </span>
          <span
            class="uc-fe-checkbox emotion-19 emotion-20"
          >
            <span
              class="uc-fe-checkbox-icon-wrap emotion-23 emotion-18"
            >
              <svg
                class="uc-fe-checkbox-icon emotion-15 emotion-16"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.7546146,7 L16.3114912,7 C15.9976349,7 15.6991638,7.15410017 15.5145424,7.41827188 L10.6774635,14.2741568 L8.48662368,11.1669943 C8.30200234,10.9059675 8.00660821,10.7487224 7.68967492,10.7487224 L6.24655149,10.7487224 C6.04654505,10.7487224 5.9296182,10.9814451 6.04654505,11.1481249 L9.88051475,16.5825143 C10.2712966,17.1391619 11.0805534,17.1391619 11.4713352,16.5825143 L17.9515441,7.39940247 C18.0715479,7.2327227 17.9546211,7 17.7546146,7 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-checkbox-content"
            >
              4
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        panelCount
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-61 emotion-62"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <svg
                class=" emotion-57 emotion-16"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.6965559,6.27668537 L21.8268863,15.0324157 C22.0577046,15.253764 22.0577046,15.6126405 21.8268863,15.8339888 C21.7160434,15.940284 21.5657082,16 21.4089527,16 L2.5910473,16 C2.26462089,16 2,15.746236 2,15.4332022 C2,15.2828781 2.06227088,15.1387109 2.17311375,15.0324157 L11.3034441,6.27668537 C11.6881413,5.90777154 12.3118587,5.90777154 12.6965559,6.27668537 Z"
                />
              </svg>
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <svg
                class=" emotion-57 emotion-16"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12.6965559,17.7233146 L21.8268863,8.96758429 C22.0577046,8.746236 22.0577046,8.38735951 21.8268863,8.16601122 C21.7160434,8.05971602 21.5657082,8 21.4089527,8 L2.5910473,8 C2.26462089,8 2,8.253764 2,8.56679776 C2,8.71712187 2.06227088,8.86128909 2.17311375,8.96758429 L11.3034441,17.7233146 C11.6881413,18.0922285 12.3118587,18.0922285 12.6965559,17.7233146 Z"
                />
              </svg>
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              min="1"
              step="1"
              value="5"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 0
        </div>
        <div
          class="emotion-72 emotion-73"
          open=""
        >
          content 0
        </div>
      </div>
      <div>
        <div>
          panel 1
        </div>
        <div
          class="emotion-74 emotion-73"
        />
      </div>
      <div>
        <div>
          panel 2
        </div>
        <div
          class="emotion-74 emotion-73"
        />
      </div>
      <div>
        <div>
          panel 3
        </div>
        <div
          class="emotion-74 emotion-73"
        />
      </div>
      <div>
        <div>
          panel 4
        </div>
        <div
          class="emotion-74 emotion-73"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- collapse-multiple 1`] = `
.emotion-4 {
  display: none;
}

.emotion-4 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        panel 1
      </div>
      <div
        class="emotion-0 emotion-1"
        open=""
      >
        content 1
      </div>
    </div>
    <div>
      <div>
        panel 2
      </div>
      <div
        class="emotion-0 emotion-1"
        open=""
      >
        content 2
      </div>
    </div>
    <div>
      <div>
        panel 3
      </div>
      <div
        class="emotion-4 emotion-1"
      />
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        panel 1
      </div>
      <div
        class="emotion-4 emotion-1"
      />
    </div>
    <div>
      <div>
        panel 2
      </div>
      <div
        class="emotion-0 emotion-1"
        open=""
      >
        content 2
      </div>
    </div>
    <div>
      <div>
        panel 3
      </div>
      <div
        class="emotion-4 emotion-1"
      />
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- collapse-uncontrolled 1`] = `
.emotion-0 {
  display: none;
}

.emotion-0 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 1
        </div>
        <div
          class="emotion-0 emotion-1"
        />
      </div>
      <div>
        <div>
          panel 2
        </div>
        <div
          class="emotion-2 emotion-1"
          open=""
        >
          content 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
        <div
          class="emotion-2 emotion-1"
          open=""
        >
          content 3
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        <div>
          panel 1
        </div>
        <div
          class="emotion-0 emotion-1"
        />
      </div>
      <div>
        <div>
          panel 2
        </div>
        <div
          class="emotion-2 emotion-1"
          open=""
        >
          content 2
        </div>
      </div>
      <div>
        <div>
          panel 3
        </div>
        <div
          class="emotion-2 emotion-1"
          open=""
        >
          content 3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel 1`] = `
.emotion-36 {
  font-size: 12px;
}

.emotion-36 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-36 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-10 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-10 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
  border-color: #e6ffed;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-inner {
  color: #ffffff;
  border-color: #e6ffed;
  background: #15ad31;
}

.emotion-3 .uc-fe-switch-button {
  left: 100%;
  margin-left: -28px;
}

.emotion-3 .uc-fe-switch-dot {
  background: #15ad31;
}

.emotion-3 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-15 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-15 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-15 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-15 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-15 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-15 .uc-fe-switch-tip-on,
.emotion-15 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-15 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-15 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-15 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-15 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-15:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-15 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-15 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-15 .uc-fe-switch-tip-on {
  display: none;
}

.emotion-36 {
  font-size: 12px;
}

.emotion-36 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-36 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-10 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-10 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-3 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-3 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-3 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-3 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-3 .uc-fe-switch-tip-on,
.emotion-3 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-3 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-3 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-3 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-3 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-3:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
  border-color: #e6ffed;
}

.emotion-3 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-3 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-3 .uc-fe-switch-inner {
  color: #ffffff;
  border-color: #e6ffed;
  background: #15ad31;
}

.emotion-3 .uc-fe-switch-button {
  left: 100%;
  margin-left: -28px;
}

.emotion-3 .uc-fe-switch-dot {
  background: #15ad31;
}

.emotion-3 .uc-fe-switch-tip-off {
  display: none;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
  color: #526075;
}

.emotion-6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.emotion-15 {
  position: relative;
  cursor: pointer;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 73px;
}

.emotion-15 .uc-fe-switch-inner {
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
}

.emotion-15 .uc-fe-switch-dot {
  position: absolute;
  display: block;
  right: 6px;
  top: 50%;
  margin-top: -2px;
  width: 4px;
  height: 4px;
  border-radius: 50%;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.emotion-15 .uc-fe-switch-button {
  position: absolute;
  display: block;
  box-sizing: border-box;
  left: 0;
  top: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-15 .uc-fe-switch-button > span {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-15 .uc-fe-switch-tip-on,
.emotion-15 .uc-fe-switch-tip-off {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  display: block;
}

.emotion-15 .uc-fe-switch-inner {
  background: #f6f6fb;
  border-color: #d2d6ea;
  border-width: 1px;
  border-style: solid;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  color: #526075;
}

.emotion-15 .uc-fe-switch-button {
  width: 28px;
  height: 28px;
  padding: 2px;
}

.emotion-15 .uc-fe-switch-button > span {
  background: #ffffff;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  border: 1px solid #d2d6ea;
}

.emotion-15 .uc-fe-switch-dot {
  background: #f44336;
}

.emotion-15:hover .uc-fe-switch-inner {
  border-color: #c3cad9;
}

.emotion-15 .uc-fe-switch-tip-on {
  padding-right: 28px;
}

.emotion-15 .uc-fe-switch-tip-off {
  padding-left: 28px;
}

.emotion-15 .uc-fe-switch-tip-on {
  display: none;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-36 emotion-90"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        open
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="10"
      >
        <div
          checked=""
          class="emotion-3 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        disabled
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="10"
      >
        <div
          class="emotion-15 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-8 emotion-9 emotion-10 emotion-11"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="2"
      >
        customTitle
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-5 emotion-6 emotion-2"
        span="10"
      >
        <div
          class="emotion-15 emotion-4"
        >
          <span
            class="uc-fe-switch-inner"
          >
            <span
              class="uc-fe-switch-tip-on"
            >
              ON
            </span>
            <span
              class="uc-fe-switch-tip-off"
            >
              OFF
            </span>
          </span>
          <span
            class="uc-fe-switch-button"
          >
            <span>
              <span
                class="uc-fe-switch-dot"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel title
      </div>
      <div
        class="emotion-38 emotion-39"
        open=""
      >
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-customTitle 1`] = `
.emotion-2 {
  display: none;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-2 {
  display: none;
}

.emotion-0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-0:link,
.emotion-0:visited {
  color: #0a1633;
}

.emotion-0:hover,
.emotion-0:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

<div>
  <div>
    <div>
      <div
        style="border:1px solid #ccc;height:28px;line-height:28px;padding:10px"
      >
        title
        <button
          class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-0 emotion-1"
          style="float:right"
          type="button"
        >
          toggle
        </button>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    />
  </div>
</div>
`;

exports[`Collapse demo -- panel-disabled 1`] = `
.emotion-0 {
  display: none;
}

.emotion-0 {
  display: none;
}

<div>
  <div>
    <div>
      Panel
    </div>
    <div
      class="emotion-0 emotion-1"
    />
  </div>
</div>
`;

exports[`Collapse demo -- panel-forceRender 1`] = `
.emotion-0 {
  display: none;
}

.emotion-0 {
  display: none;
}

<div>
  <div>
    <div>
      Panel
    </div>
    <div
      class="emotion-0 emotion-1"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-titlePosition 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class="emotion-0 emotion-1"
        open=""
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="emotion-0 emotion-1"
        open=""
      >
        Content
      </div>
      <div>
        Panel
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse demo -- panel-uncontrolled 1`] = `
<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class="emotion-0 emotion-1"
        open=""
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div>
        Panel
      </div>
      <div
        class="emotion-0 emotion-1"
        open=""
      >
        Content
      </div>
    </div>
  </div>
</div>
`;
